<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <FrameLayout 
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/bg">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_tag"
            android:textColor="@color/white"
            android:textSize="@dimen/tag_font"
            android:layout_gravity="center"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="@dimen/tag_font"
            android:layout_gravity="right|center_vertical"/>
    </FrameLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="@dimen/activity_horizontal_margin">
            <LinearLayout 
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center">
                <Button
                    android:id="@+id/view"
                    android:layout_width="@dimen/tag_width"
                    android:layout_height="@dimen/tag_height"
                    android:text="@string/view"
                    android:textColor="@color/white"
                    android:textSize="@dimen/tag_font"
                    android:background="@color/bg" />
            </LinearLayout>
            <LinearLayout 
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/tag_margin_left"
                android:layout_height="match_parent"
                android:gravity="center">
                <Button
                    android:id="@+id/restaurant"
                    android:layout_width="@dimen/tag_width"
                    android:layout_height="@dimen/tag_height"
                    android:text="@string/restaurant"
                    android:textColor="@color/white"
                    android:textSize="@dimen/tag_font"
                    android:background="@color/bg" />
            </LinearLayout>
            <LinearLayout 
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/tag_margin_left"
                android:layout_height="match_parent"
                android:gravity="center">
                <Button
                    android:id="@+id/hotel"
                    android:layout_width="@dimen/tag_width"
                    android:layout_height="@dimen/tag_height"
                    android:text="@string/hotel"
                    android:textColor="@color/white"
                    android:textSize="@dimen/tag_font"
                    android:background="@color/bg" />
            </LinearLayout>
        </LinearLayout>
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin">
             <LinearLayout 
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center">
                <Button
                    android:id="@+id/entertainment"
                    android:layout_width="@dimen/tag_width"
                    android:layout_height="@dimen/tag_height"
                    android:text="@string/entertainment"
                    android:textColor="@color/white"
                    android:textSize="@dimen/tag_font"
                    android:background="@color/bg" />
            </LinearLayout>
            <LinearLayout 
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/tag_margin_left"
                android:layout_height="match_parent"
                android:gravity="center">
                <Button
                    android:id="@+id/shopping"
                    android:layout_width="@dimen/tag_width"
                    android:layout_height="@dimen/tag_height"
                    android:text="@string/shopping"
                    android:textColor="@color/white"
                    android:textSize="@dimen/tag_font"
                    android:background="@color/bg" />
            </LinearLayout>
            <LinearLayout 
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/tag_margin_left"
                android:layout_height="match_parent"
                android:gravity="center">
                <Button
                    android:id="@+id/other"
                    android:layout_width="@dimen/tag_width"
                    android:layout_height="@dimen/tag_height"
                    android:text="@string/other"
                    android:textColor="@color/white"
                    android:textSize="@dimen/tag_font"
                    android:background="@color/bg" />
            </LinearLayout>           
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
