<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    android:orientation="horizontal"
    android:background="@color/bg" >
    
    <RelativeLayout 
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent">         
        <Button 
            android:id="@+id/back"
            android:layout_width="@dimen/button_width"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:text="@string/cancel"
            android:textColor="@color/black"/>
    </RelativeLayout>
        
    <LinearLayout 
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="match_parent"
        android:gravity="center">      
        <TextView 
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/basic_infor"
            android:textColor="@color/black"/>
     </LinearLayout>
        
     <RelativeLayout
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="match_parent">        
         <Button
             android:id="@+id/next"
             android:layout_width="@dimen/button_width"
             android:layout_height="match_parent"
             android:background="@color/white"
             android:text="@string/next"
             android:textColor="@color/black"
             android:layout_alignParentRight="true"/>
     </RelativeLayout>

</LinearLayout>
