<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/bg" >
    
    <ImageView 
        android:id="@+id/coverImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/test"/>
    
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/create_plan_horizontal_margin">
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/create_plan_horizontal_margin"
            android:layout_marginRight="@dimen/create_plan_horizontal_margin"
            android:layout_marginTop="@dimen/create_plan_horizontal_margin">
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plan_name"/>
            <EditText 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/create_plan_horizontal_margin"
                android:background="@drawable/bg_edittext"/>
        </LinearLayout>
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/create_plan_horizontal_margin"
            android:layout_marginRight="@dimen/create_plan_horizontal_margin"
            android:layout_marginTop="@dimen/create_plan_horizontal_margin">
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plan_time"/>          
            <EditText 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/create_plan_horizontal_margin"
                android:background="@drawable/bg_edittext"/>
        </LinearLayout>
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/create_plan_horizontal_margin"
            android:layout_marginRight="@dimen/create_plan_horizontal_margin"
            android:layout_marginTop="@dimen/create_plan_horizontal_margin">
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_position"/>   
            <EditText 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/create_plan_horizontal_margin"
                android:background="@drawable/bg_edittext"/>
        </LinearLayout>
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/create_plan_horizontal_margin"
            android:layout_marginRight="@dimen/create_plan_horizontal_margin"
            android:layout_marginTop="@dimen/create_plan_horizontal_margin">
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_time"/>           
            <EditText 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/create_plan_horizontal_margin"
                android:background="@drawable/bg_edittext"/>
        </LinearLayout>
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/create_plan_horizontal_margin"
            android:layout_marginRight="@dimen/create_plan_horizontal_margin"
            android:layout_marginTop="@dimen/create_plan_horizontal_margin">
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plan_remarks"/>           
            <EditText 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/create_plan_horizontal_margin"
                android:background="@drawable/bg_edittext"/>
        </LinearLayout>   
        
     </LinearLayout>

</LinearLayout>
