<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:background="@color/bg" >
    
    <SearchView 
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white">
    </SearchView>
    
    <ImageView 
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/test"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"/>
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp" >
        <LinearLayout 
            android:id="@+id/choose_current_position"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:orientation="vertical">
            <LinearLayout 
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical">               
            	<TextView 
                	android:layout_width="wrap_content"
                	android:layout_height="wrap_content"
                	android:text="@string/choose_current_position"
                	android:textColor="@color/white"/>
            </LinearLayout>
            <LinearLayout 
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical">             
            	<TextView 
                	android:layout_width="wrap_content"
                	android:layout_height="wrap_content"
                	android:text="@string/position"
                	android:textColor="@color/grey"/>
            </LinearLayout>
        </LinearLayout>
        
        <TextView 
            android:id="@+id/create_new_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_position"
            android:textColor="@color/white"
            android:layout_alignParentBottom="true"/>
        
        <ListView 
            android:id="@+id/history_position_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_above="@id/create_new_position"
            android:layout_below="@id/choose_current_position">
            
        </ListView>
        
    </RelativeLayout>

</LinearLayout>
